FileControl: progress-bar + placeholderReadonly

--- a/src/app/shared/form-controls/file-control/file-control.component.html
+++ b/src/app/shared/form-controls/file-control/file-control.component.html
@@ -30,13 +30,27 @@
       </span>
     </div>
 
-    <div class="file-info" *ngIf="fileControlConfig.showFileInfo">
-      <p><strong>{{ file.name }}</strong></p>
-      <p>{{file.sizeString}}</p>
-      <p>{{progress}}</p>
-    </div>
-
     <ng-container *ngIf="fileControlConfig.showFileInfo">
+      <div class="file-info">
+        <p><strong>{{ file.name }}</strong></p>
+        <p *ngIf="!file.download$">{{file.sizeString}}</p>
+
+        <ng-container *ngIf="file.download$ | async as download">
+          <p>
+            <span *ngIf="download.state === 'ERROR'" class="warning-text">Error </span>
+
+            {{formatBytes(download.loaded)}} de {{file.sizeString}} - <strong>{{download.progress}}%</strong>
+          </p>
+
+          <div class="file-download-progress">
+            <mat-progress-bar
+              [mode]="download.state == 'PENDING' ? 'buffer' : 'determinate'"
+              [value]="download.progress">
+            </mat-progress-bar>
+          </div>
+        </ng-container>
+      </div>
+
       <div *ngIf="!file.uid && !fileControlConfig.autoUpload" class="file-menu-btn"
         (click)="onClickFileOptions(file, 'SAVE')" [title]="fileControlConfig.textSave">
         <mat-icon>cloud_upload</mat-icon>
@@ -61,7 +75,7 @@
   </div>
 
   <div class="placeholder" *ngIf="!filesToUpload?.length">
-    {{fileControlConfig.placeholder}}
+    {{readonly ? fileControlConfig.placeholderReadonly : fileControlConfig.placeholder}}
   </div>
 
 </div>
