--- a/src/app/shared/form-controls/file-control/file-control.component.scss
+++ b/src/app/shared/form-controls/file-control/file-control.component.scss
@@ -105,6 +105,10 @@ input[type=file] {
         text-overflow: ellipsis;
       }
     }
+
+    .file-download-progress {
+      padding-top: $space;
+    }
   }
 
   .file-add {
