--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -267,3 +267,15 @@ table.mat-table {
   height: 35px !important;
   font-family: $font-family;
 }
+
+//
+// progress bar
+//
+
+.mat-progress-bar {
+  border-radius: 2px !important;
+}
+
+.mat-progress-bar-fill::after {
+  background-color: $primary-color-light !important;
+}
