Rename 'Digitalización' tab to 'Preprocesamiento'

--- a/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
+++ b/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
@@ -13,9 +13,10 @@
     </ng-template>
   </mat-tab>
 
-  <mat-tab label="Digitalización" *ngIf="transaction.actions.show.preprocessingTab">
+  <mat-tab label="Preprocesamiento" *ngIf="transaction.actions.show.preprocessingTab">
     <ng-template matTabContent>
-      <emp-land-preprocessing>
+      <emp-land-preprocessing
+        [transactionUID]="transaction.uid">
 
       </emp-land-preprocessing>
     </ng-template>
