Bind selectedIndex of mat-tab-group in two-way binding

--- a/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
+++ b/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
@@ -4,7 +4,7 @@
                      ''"
              (cardClose)="onClose()">
 
-<mat-tab-group [selectedIndex]="selectedTabIndex">
+<mat-tab-group [(selectedIndex)]="selectedTabIndex">
   <mat-tab label="Información del trámite">
     <emp-land-transaction-editor>
 
