--- a/src/app/views/transactions/transaction-list/transaction-list.component.html
+++ b/src/app/views/transactions/transaction-list/transaction-list.component.html
@@ -17,7 +17,8 @@
            [finalText]="selection.hasValue() ?
               selection.selected.length + ' de ' + transactionList.length + ' trámites seleccionados':
               transactionList.length + ' trámites encontrados'"
-           [isLoading]="isLoading"></div>
+           [isLoading]="isLoading">
+      </div>
 
     </div>
 
@@ -38,9 +39,21 @@
   <div class="card-body" [empNgSpinnerHost]="spinner">
     <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
 
+    <div [@expandCollapse] *ngIf="selection.hasValue()">
+      <div class="list-selection-header" fxLayoutAlign="start center">
+        <span fxFlex="35%">¿Qué debo hacer con
+          <span *ngIf="selection.selected.length === 1">el trámite?</span>
+          <span *ngIf="selection.selected.length > 1">los {{selection.selected.length}} trámites?</span>
+        </span>
+        <button class="btn-action" (click)="onClickTransactionsSelectedOptions()">
+          Cambiar estado
+        </button>
+      </div>
+    </div>
+
     <div *ngFor="let transaction of transactionList"
-          class="list-item" matRipple [matRippleTrigger]="trigger"
-          [class.list-item-selected]="isSelected(transaction)">
+          class="list-item" [class.list-item-selected]="isSelected(transaction)"
+          matRipple [matRippleTrigger]="trigger" matRippleColor="rgb(44, 57, 66, 0.05)">
 
       <div class="list-item-checkbox">
         <mat-checkbox
@@ -55,8 +68,9 @@
       <div class="list-item-container">
 
         <div class="list-item-name">
-          <strong><a #trigger
-              (click)="onSelectTransaction(transaction)">{{transaction.requestedBy}}</a></strong>
+          <strong>
+            <a #trigger (click)="onSelectTransaction(transaction)">{{transaction.requestedBy}}</a>
+          </strong>
         </div>
 
         <emp-land-transaction-list-item
