--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -13,6 +13,10 @@
   font-family: "Material Icons" !important;
 }
 
+a > .mat-icon:hover {
+  color: $icon-color-dark;
+}
+
 button .mat-icon {
   color: $icon-color-light;
   cursor: pointer;
@@ -227,7 +231,7 @@ table.mat-table {
 //
 
 .mat-divider.divider-padding {
-  margin: 0.5rem 0;
+  margin: 0.5rem 0.5rem 0.5rem 0;
 }
 
 //
