--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -7,6 +7,9 @@
 
 @import "general-styles";
 
+$box-shadow: 0 3px 1px -2px rgba(44, 57, 66, 0.1),
+  0 2px 2px 0 rgba(44, 57, 66, 0.07), 0 1px 5px 0 rgba(44, 57, 66, 0.05);
+
 .list-header {
   @include row;
 
@@ -16,6 +19,21 @@
   margin-left: 4pt;
   padding: 4pt 16pt 4pt 8pt;
   border-bottom: 1pt solid $primary-color-light;
+}
+
+.list-selection-header {
+  background: $border-color-light;
+  padding: 5px;
+  margin: 3px;
+  box-shadow: $box-shadow;
+
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+
+  > span {
+    padding: 8px;
+  }
 }
 
 .list-item {
@@ -37,11 +55,8 @@
 }
 
 .list-item-selected {
-  background-color: $grid-selected-background-color;
-  box-shadow:
-    0 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  background-color: $selected-control-background-color;
+  box-shadow: $box-shadow;
 }
 
 .list-item-checkbox {
