--- a/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
+++ b/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
@@ -40,7 +40,7 @@
     </ng-container>
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
-      <td mat-cell *matCellDef="let row" class="text-align-center">
+      <td mat-cell *matCellDef="let row" class="text-align-center padding-icon">
         <mat-icon (click)="removeService(row)">delete</mat-icon>
       </td>
     </ng-container>
