PATCH: If media type is html, display url with window.open instead of use PrinterService

--- a/src/app/shared/form-controls/file-print-preview/file-print-preview.component.html
+++ b/src/app/shared/form-controls/file-print-preview/file-print-preview.component.html
@@ -8,9 +8,9 @@
 
     <div class="container-iframe-preview">
 
-      <iframe *ngIf="url" [src]="url | safeUrl" class="iframe-preview">
+      <object *ngIf="url" [data]="url | safeUrl" class="iframe-preview">
 
-      </iframe>
+      </object>
 
     </div>
 
