--- a/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
+++ b/src/app/views/transactions/transaction-tabbed-view/transaction-tabbed-view.component.html
@@ -20,8 +20,7 @@
 
   <mat-tab label="Inscripción" *ngIf="transaction.actions.show.instrumentRecordingTab">
     <emp-land-instrument-edition
-      [transactionUID]="transaction.uid"
-      [canEdit]="transaction.actions.can.editInstrument">
+      [transactionUID]="transaction.uid">
 
     </emp-land-instrument-edition>
   </mat-tab>
