Feat: stamp media buttons added for instrument and its physical recordings

--- a/src/app/views/instrument-edition/instrument-edition.component.html
+++ b/src/app/views/instrument-edition/instrument-edition.component.html
@@ -11,6 +11,7 @@
 
   <emp-land-physical-recording-list
     [physicalRecordings]="instrument.registration.physicalRecordings"
+    [showRegistrationStamps]="instrument.actions.show.registrationStamps"
     [canDelete]="instrument.actions.can.deletePhysicalRecordings"
     (physicalRecordingListEvent)="onPhysicalRecordingListEvent($event)">
 
