--- a/src/app/views/instrument-edition/instrument/instrument-header.component.html
+++ b/src/app/views/instrument-edition/instrument/instrument-header.component.html
@@ -183,16 +183,37 @@
       </div>
     </div>
 
-    <div *ngIf="instrument.actions.can.edit" fxLayout="row" fxLayoutAlign="space-between" >
-      <button (click)="enableEditor(readonly)" [ngClass]="readonly ? 'btn-action' : 'btn-warning'">
-        {{readonly ? 'Editar Documento' : 'Descartar Cambios'}}
-      </button>
+    <div fxLayout="row" fxLayoutAlign="space-between" >
 
-      <button *ngIf="!readonly" (click)="submit()"
-        [class.btn]="form?.invalid"
-        [class.btn-action]="form?.valid">
-        Guardar los Cambios
-      </button>
+      <ng-container *ngIf="instrument.actions.can.edit">
+
+        <button (click)="enableEditor(readonly)" [ngClass]="readonly ? 'btn-action' : 'btn-warning'">
+          {{readonly ? 'Editar Documento' : 'Descartar Cambios'}}
+        </button>
+
+        <button *ngIf="!readonly" (click)="submit()"
+          [class.btn]="form?.invalid" [class.btn-action]="form?.valid">
+          Guardar los Cambios
+        </button>
+
+      </ng-container>
+
+      <ng-container *ngIf="instrument.actions.show.registrationStamps &&
+                           instrument.registration.stampMedia.url !== ''">
+
+        <button (click)="submitPrintRegistrationStampMedia()" class="btn-action">
+          Imprimir sello interesado
+        </button>
+
+      </ng-container>
+
     </div>
   </div>
 </form>
+
+
+<emp-ng-file-print-preview #filePrintPreview
+  title="Impresión de sello interesado"
+  [hint]="instrument.typeName">
+
+</emp-ng-file-print-preview>
