--- a/src/app/views/physical-recording/physical-recording-list.component.html
+++ b/src/app/views/physical-recording/physical-recording-list.component.html
@@ -61,7 +61,6 @@
 </div>
 
 <emp-ng-file-print-preview #filePrintPreview
-  title="Impresión de sello partida"
-  [hint]="">
+  title="Impresión de sello partida">
 
 </emp-ng-file-print-preview>
