--- a/src/app/views/transactions/workflow-editor/workflow-editor.component.html
+++ b/src/app/views/transactions/workflow-editor/workflow-editor.component.html
@@ -84,7 +84,7 @@
                 [class.btn]="!formHandler.isValid"
                 [class.btn-action]="formHandler.isValid"
                 (click)="submitTransaction()">
-                Guardar
+                Ejecutar la operación
               </button>
 
             </div>
