--- a/src/app/views/main-layout/main-menu/main-menu.component.html
+++ b/src/app/views/main-layout/main-menu/main-menu.component.html
@@ -1,8 +1,9 @@
 <div class="nav-bar">
   <ul>
     <li><a routerLink='/transactions' routerLinkActive='selected' [routerLinkActiveOptions]="{exact:false}">TRÁMITES</a></li>
-    <li>MESA DE CONTROL</li>
-    <li><a routerLink='/search-services' routerLinkActive='selected' [routerLinkActiveOptions]="{exact:false}">CONSULTAS</a></li>
+    <!-- <li>MESA DE CONTROL</li> -->
+    <li>CONSULTAS</li>
+    <!-- <li><a routerLink='/search-services' routerLinkActive='selected' [routerLinkActiveOptions]="{exact:false}">CONSULTAS</a></li> -->
     <li>CAPTURA HISTÓRICA</li>
   </ul>
 </div>
