--- a/src/app/views/instrument-edition/parties/party-list.component.html
+++ b/src/app/views/instrument-edition/parties/party-list.component.html
@@ -1,21 +1,21 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Nombre </th>
-    <td mat-cell *matCellDef="let row"> 
+    <td mat-cell *matCellDef="let row">
       <strong>{{row.name}}</strong>
       <div class="grid-text-item" fxLayout="row" *ngFor="let item of row.partiesList" style="font-size: 8pt;">
         <div class="pr-1 label">{{item.role.name}}: </div>
         <strong>{{item.name}}</strong>
-      </div> 
+      </div>
     </td>
   </ng-container>
   <ng-container matColumnDef="typeIdentification">
     <th mat-header-cell *matHeaderCellDef> Identificación </th>
-    <td mat-cell *matCellDef="let row"> 
+    <td mat-cell *matCellDef="let row">
       <ng-container *ngIf="row.identification?.typeIdentification.name != ''">
-        {{row.identification?.typeIdentification.name}}: 
+        {{row.identification?.typeIdentification.name}}:
       </ng-container>
-      {{row.identification?.numberIdentification}} 
+      {{row.identification?.numberIdentification}}
   </td>
   </ng-container>
   <ng-container matColumnDef="role">
@@ -28,8 +28,8 @@
   </ng-container>
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef> </th>
-    <td mat-cell *matCellDef="let row" class="text-align-center"> 
-      <mat-icon (click)="removeParty(row)">delete</mat-icon> 
+    <td mat-cell *matCellDef="let row" class="text-align-center">
+      <mat-icon (click)="removeParty(row)">delete</mat-icon>
     </td>
   </ng-container>
 
@@ -37,6 +37,6 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<div *ngIf="dataSource.data.length == 0" class="text-align-center" style="padding-bottom: 1rem;">
+<div *ngIf="dataSource.data.length == 0" class="text-not-found">
   <p>No se han agregado personas u organizaciones.</p>
 </div>
