--- a/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
+++ b/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
@@ -49,7 +49,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <div *ngIf="dataSource.data.length == 0" class="text-align-center" style="padding-bottom: 1rem;">
+  <div *ngIf="dataSource.data.length == 0" class="text-not-found">
     <p>No se han agregado conceptos.</p>
   </div>
 
