--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -35,6 +35,14 @@ $box-shadow: 0 3px 1px -2px rgba(44, 57, 66, 0.1),
   }
 }
 
+.list-container {
+  background: #fafafa;
+  margin-right: 8px;
+  padding: 2px;
+  max-height: 400px;
+  overflow-y: auto;
+}
+
 .list-item {
   @include row;
 
